[package]
name = "sage"
version = "0.1.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Sage is an open source Knowledge Graph used to represent linked-data."
license = "Apache-2.0"
repository = "https://github.com/victor-iyiola/sage"
keywords = ["knowledge-graph", "linked-data", "sage"]

[lib]
name = "sage"

[dependencies]
dotenv = "0.14"
log = "0.4"
ntriple = "0.1.1"
regex = "1.3.1"
rdf = "0.1.4"
rand = "0.7.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[workspace]
members = [
  "sage_cli"
]

[badges]
appveyor = { repository = "victor-iyiola/sage", service = "github" }
travis-ci = { repository = "victor-iyiola/sage" }
