[package]
name = "sage"
version = "0.3.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2018"
description = "Sage is an open source Knowledge Graph used to represent linked-data."
readme = "README.md"
homepage = "https://github.io/victor-iyi/sage"
repository = "https://github.com/victor-iyi/sage"
license = "Apache-2.0"
keywords = ["sage", "knowledge-graph", "linked-data"]
categories = ["data-structures", "science", "text-processing"]
exclude = ["/resources"]
publish = false
autotests = true

[lib]
name = "sage"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15"
indexmap = "1.7"
log = "0.4"
ntriple = "0.1.1"
regex = "1.3.1"
rdf = "0.1.4"
rand = "0.8"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[workspace]
members = [
  "sage_cli",
]

[badges]
appveyor = { repository = "victor-iyi/sage", service = "github" }
travis-ci = { repository = "victor-iyi/sage" }
