[package]
name = "sage_cli"
version = "0.1.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Provides the CLI for the Sage crate"
readme = "README.md"
repository = "https://github.com/victor-iyiola/rust-sage"
keywords = ["knowledge-graph", "linked-data", "sage", "cli"]
autotests = false

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
sage = { path = "../../sage" }