[package]
name = "sage_cli"
version = "0.1.1"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Command line interface support for `sage`."
readme = "README.md"
repository = "https://github.com/victor-iyi/sage"
keywords = ["knowledge-graph", "linked-data", "sage", "cli"]
autotests = false

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
clap = "2.33"
sage = { path = "../../sage" }
