[package]
name = "sage_cli"
version = "0.1.1"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2018"
description = "Command line interface support for `sage`."
readme = "README.md"
repository = "https://github.com/victor-iyi/sage"
license = "Apache-2.0"
keywords = ["sage", "knowledge-graph", "linked-data", "cli"]
categories = ["command-line-interface", "command-line-utilities"]
autobins = false
autotests = false

[[bin]]
name = "sage-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
sage = { path = "../../sage" }
